Actualizando workflow de Assessment

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,16 @@ AZURE_KEY_VAULT_SECRET_NAME=azure-open-ai-key
 MCP_ENDPOINT=https://learn.microsoft.com/api/mcp
 
 # ===================================================================
+# Azure Application Insights (Observability)
+# ===================================================================
+# Connection string de tu Application Insights
+# Formato: InstrumentationKey=xxx;IngestionEndpoint=https://xxx.in.applicationinsights.azure.com/;LiveEndpoint=https://xxx.livediagnostics.monitor.azure.com/
+APPLICATION_INSIGHTS_CONNECTION_STRING=your-application-insights-connection-string
+
+# Habilitar/deshabilitar observabilidad
+ENABLE_OBSERVABILITY=true
+
+# ===================================================================
 # Application Settings
 # ===================================================================
 MAX_ASSESSMENT_ITERATIONS=3
